[package]
authors = ["49nord GmbH <hello@49nord.de>"]
name = "process_guard"
version = "0.1.1"
license = "MIT"
repository = "https://github.com/49nord/process_guard-rs"
documentation = "https://docs.rs/process_guard"
readme = "README.md"
description = "Guard a process by terminating it on drop"

[dependencies]
nix = "0.11.0"
ticktock = "0.7.0"
