[package]
authors = ["49nord GmbH <hello@49nord.de>"]
description = "Guard a process by terminating it on drop"
documentation = "https://docs.rs/process_guard"
license = "MIT"
name = "process_guard"
readme = "README.md"
repository = "https://github.com/49nord/process_guard-rs"
version = "0.2.0"

[dependencies]
log = "0.4.2"
nix = "0.11.0"
ticktock = "0.7.0"
